[gd_scene load_steps=3 format=2]

[ext_resource path="res://libs/WallsTileset.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://scenes/MazeSections/MazeSection.gd" type="Script" id=2]

[node name="MazeSection4" type="Spatial"]
script = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 2, 0, 0, 65535, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, 2, 1, 0, 65535, 1, 0, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -5, 1, 1, -4, 1, 1, -3, 1, 1, -2, 1, 1, -1, 1, 1, 2, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, -65536, 2, 1, -65535, 2, 1073741825, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -5, 2, 1, -4, 2, 1, -3, 2, 1, -2, 2, 1, -1, 2, 1, 2, 3, 0, 65535, 3, 0, -65536, 3, 1, -65535, 3, 1, -65534, 3, 1, -65533, 3, 1, -65532, 3, 1, -5, 3, 1, -4, 3, 1, -3, 3, 1, -2, 3, 1, -1, 3, 1, 0, 4, 0, 1, 4, 0, 2, 4, 0, 65535, 4, 0, -65536, 4, 1, -65535, 4, 1, -65534, 4, 1, -65533, 4, 1, -65532, 4, -1610612735, -5, 4, 1, -4, 4, 1, -3, 4, 1, -2, 4, 1, -1, 4, -1610612735, -65536, 65531, 1, -65535, 65531, 1, -65534, 65531, 1, -65533, 65531, 1, -65532, 65531, -1610612735, -5, 65531, 1, -4, 65531, 1, -3, 65531, 1, -2, 65531, 1, -1, 65531, 1, -65536, 65532, 1, -65535, 65532, 1, -65534, 65532, 1, -65533, 65532, 1, -65532, 65532, 1, -5, 65532, 1, -4, 65532, 1, -3, 65532, 1, -2, 65532, -1073741823, -1, 65532, 1, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, -65536, 65533, 1, -65535, 65533, -1073741823, -65534, 65533, 1, -65533, 65533, 1, -65532, 65533, 1, -5, 65533, 1, -4, 65533, -1610612735, -3, 65533, 1, -2, 65533, 1, -1, 65533, -1073741823, 2, 65534, 0, 65533, 65534, 0, -65536, 65534, 1, -65535, 65534, 1, -65534, 65534, 1, -65533, 65534, 1, -65532, 65534, 1, -5, 65534, 1, -4, 65534, 1, -3, 65534, 1, -2, 65534, 1, -1, 65534, -1610612735, 0, 65535, -1610612736, 2, 65535, 0, 65535, 65535, 0, -65536, 65535, 1, -65535, 65535, 1, -65534, 65535, 1, -65533, 65535, 1, -65532, 65535, 1, -5, 65535, 1, -4, 65535, 1, -3, 65535, 1, -2, 65535, 1, -1, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="GemContainer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.93525, 0.5, 6.73241 )

[node name="EnemyContainer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.11746, 3.44465, -3.00209 )

[node name="PumpkinContainter" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.69903, 1.15747, 6.30698 )
